tests/baselines/reference/topLevelAwaitErrors.1.errors.txt
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(4,8): error TS2695: Left side of comma operator is unused and has no side effects.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(4,10): error TS1109: Expression expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(5,14): error TS1005: '>' expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(5,16): error TS2693: 'string' only refers to a type, but is being used as a value here.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(8,14): error TS1005: '>' expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(8,16): error TS2693: 'string' only refers to a type, but is being used as a value here.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(11,17): error TS2304: Cannot find name 'await'.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(15,8): error TS1109: Expression expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(18,8): error TS1146: Declaration expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(18,8): error TS2304: Cannot find name 'x'.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(18,9): error TS1005: ';' expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(22,6): error TS1146: Declaration expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(22,7): error TS2304: Cannot find name 'C3'.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(22,10): error TS1005: ';' expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(26,6): error TS2304: Cannot find name 'await'.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(27,11): error TS1005: ';' expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(27,12): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(27,13): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(27,15): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(28,1): error TS1109: Expression expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(30,6): error TS2304: Cannot find name 'await'.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(30,13): error TS1005: ';' expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(34,12): error TS1109: Expression expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(40,14): error TS2304: Cannot find name 'await'.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(40,22): error TS1005: ')' expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(40,23): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(40,25): error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(41,5): error TS2304: Cannot find name 'method2'.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(41,13): error TS1135: Argument expression expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(41,24): error TS2304: Cannot find name 'x'.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(41,28): error TS1005: ';' expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(42,5): error TS2304: Cannot find name 'method3'.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(42,13): error TS1135: Argument expression expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(42,20): error TS1109: Expression expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(42,23): error TS2304: Cannot find name 'x'.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(42,27): error TS1005: ';' expected.
tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts(43,1): error TS1109: Expression expected.


==== tests/cases/conformance/externalModules/topLevelAwaitErrors.1.ts (37 errors) ====
    export {};
    
    // reparse call as invalid await should error
    await (1,);
           ~
!!! error TS2695: Left side of comma operator is unused and has no side effects.
             ~
!!! error TS1109: Expression expected.
    await <number, string>(1);
                 ~
!!! error TS1005: '>' expected.
                   ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
    
    // reparse tagged template as invalid await should error
    await <number, string> ``;
                 ~
!!! error TS1005: '>' expected.
                   ~~~~~~
!!! error TS2693: 'string' only refers to a type, but is being used as a value here.
    
    // reparse class extends clause should fail
    class C extends await<string> {
                    ~~~~~
!!! error TS2304: Cannot find name 'await'.
    }
    
    // await in class decorators should fail
    @(await)
           ~
!!! error TS1109: Expression expected.
    class C1 {}
    
    @await(x)
           
!!! error TS1146: Declaration expected.
           ~
!!! error TS2304: Cannot find name 'x'.
            ~
!!! error TS1005: ';' expected.
    class C2 {}
    
    @await
    class C3 {}
         
!!! error TS1146: Declaration expected.
          ~~
!!! error TS2304: Cannot find name 'C3'.
             ~
!!! error TS1005: ';' expected.
    
    // await in member decorators should fail
    class C4 {
        @await
         ~~~~~
!!! error TS2304: Cannot find name 'await'.
        ["foo"]() {}
              ~
!!! error TS1005: ';' expected.
               ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
                ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
                  ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
    }
    ~
!!! error TS1109: Expression expected.
    class C5 {
        @await(1)
         ~~~~~
!!! error TS2304: Cannot find name 'await'.
                ~
!!! error TS1005: ';' expected.
        ["foo"]() {}
    }
    class C6 {
        @(await)
               ~
!!! error TS1109: Expression expected.
        ["foo"]() {}
    }
    
    // await in parameter decorators should fail
    class C7 {
        method1(@await [x]) {}
                 ~~~~~
!!! error TS2304: Cannot find name 'await'.
                         ~
!!! error TS1005: ')' expected.
                          ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
                            ~
!!! error TS1068: Unexpected token. A constructor, method, accessor, or property was expected.
        method2(@await(1) [x]) {}
        ~~~~~~~
!!! error TS2304: Cannot find name 'method2'.
                ~
!!! error TS1135: Argument expression expected.
                           ~
!!! error TS2304: Cannot find name 'x'.
                               ~
!!! error TS1005: ';' expected.
        method3(@(await) [x]) {}
        ~~~~~~~
!!! error TS2304: Cannot find name 'method3'.
                ~
!!! error TS1135: Argument expression expected.
                       ~
!!! error TS1109: Expression expected.
                          ~
!!! error TS2304: Cannot find name 'x'.
                              ~
!!! error TS1005: ';' expected.
    }
    ~
!!! error TS1109: Expression expected.
    